--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.18</version>
+</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
